<resources>
    <string name="app_name">KookbookApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="prompt_display_name">Naam</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_share_online">Deel online</string>
    <string name="prompt_preparation_time">Bereidingstijd (In minuten)</string>
    <string name="action_sign_in">Log in of registreer</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="loginButton">Login</string>
    <string name="registerButton">Registreer</string>
    <string name="title_activity_side_navigation">SideNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Instellingen</string>
    <string name="sign_up">Registreer</string>
    <string name="sign_in">Log in</string>
    <string name="back">Terug</string>

    <string name="home_screen_title">Home</string>
    <string name="my_recipes_screen_title">Mijn Recepten</string>
    <string name="online_recipes_screen_title">Online Recepten</string>
    <string name="new_recipe_screen_title">Nieuw Recept</string>
    <string name="statistics_screen_title">Statistieken</string>
    <string name="logout_screen_title">Uitloggen</string>

    <string name="prompt_recipe_name">Receptnaam</string>
    <string name="prompt_recipe_type">Type gerecht</string>
    <string name="content_description_recipe">Recipe Image</string>
    <string name="content_serving_tip_recipe">Tip</string>
    <string name="prompt_recipe_serving_tip">Serveer tip:</string>
    <string name="list_group">ListGroup</string>
    <string name="list_group_item_title">Title</string>
    <string name="list_group_item_desc">Desc</string>

    <string name="start_background_image">Start Background Image</string>
    <string name="start_black_rectangle">Start Black Background Rectangle</string>
    <string name="start_logo_text">CookBook Logo Text</string>

    <string name="placeholder_count_vistited_recipes">Aantal bekeken recepten: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_recipes">Delete Recipes</string>
    <string name="download_recipes">Download Recipes</string>
    <string name="add_new_recipe_button">Voeg recept toe</string>
    <string name="recept_informatie">Recept informatie</string>
    <string name="ingredients">Ingrediënten</string>
    <string name="ingredient_and_amount">Ingrediënt en hoeveelheid</string>
    <string name="voeg_toe">Voeg toe</string>
    <string name="voorbereidingsstappen">Voorbereidingsstappen</string>
    <string name="stap_titel">Stap Titel</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="kookstappen">Kookstappen</string>

    <string-array name="recipe_types">
        <item>Hoofdgerecht</item>
        <item>Saus</item>
        <item>Voorgerecht</item>
        <item>Nagerecht</item>
        <item>Koek</item>
        <item>Taart</item>
    </string-array>
</resources>
