<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24px"
            android:title="@string/home_screen_title" />
        <item
            android:id="@+id/my_recipes"
            android:icon="@drawable/ic_baseline_list_24px"
            android:title="@string/my_recipes_screen_title" />
        <item
            android:id="@+id/online_recipes"
            android:icon="@drawable/ic_baseline_cloud_24px"
            android:title="@string/online_recipes_screen_title" />
        <item
            android:id="@+id/new_recipe"
            android:icon="@drawable/ic_baseline_add_24px"
            android:title="@string/new_recipe_screen_title" />
        <item
            android:id="@+id/statistics"
            android:icon="@drawable/ic_baseline_show_chart_24px"
            android:title="@string/statistics_screen_title" />
    </group>

    <item android:title="Account Acties">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24px"
                android:title="@string/logout_screen_title" />
        </menu>
    </item>

</menu>
