<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/content_description_recipe"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/recipe_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="16dp"
            android:gravity="center|end"
            android:text="@string/prompt_recipe_type"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_preparation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center|end"
            android:layout_margin="@dimen/text_margin"
            android:drawableStart="@drawable/common_google_signin_btn_icon_disabled"
            android:gravity="center|end"
            android:text="@string/prompt_preparation_time"
            android:textAlignment="gravity"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="4dp"
        android:background="#360204" />

    <ExpandableListView
        android:id="@+id/expandableRecipeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <View
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_height="2dip"
        android:background="#360204"
        android:layout_marginVertical="4dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="2dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/prompt_recipe_serving_tip"/>
        <TextView
            android:id="@+id/recipe_serving_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="2dp"
            android:text="@string/content_serving_tip_recipe"/>
    </LinearLayout>

</LinearLayout>
