<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/recipeNameText"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:backgroundTint="@color/colorAppRed"
        android:hint="@string/prompt_display_name"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/preparationTimeNumber"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAppRed"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:hint="@string/prompt_preparation_time"
        android:inputType="number"
        android:singleLine="true" />

    <Switch
        android:id="@+id/shareOnlineSwitch"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/recipeNameText"
        android:layout_marginTop="245dp"
        android:text="@string/prompt_share_online" />

    <Spinner
        android:id="@+id/recipyTypeSpinner"
        android:layout_width="312dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:entries="@array/recipe_types" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="315dp"
        android:backgroundTint="@color/colorAppRed"
        android:layout_height="234dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/recipeNameText"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:inputType="textMultiLine" />

</RelativeLayout>