<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/start_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <RelativeLayout
            android:id="@+id/registerRL"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:background="@color/colorPrimaryDark">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:contentDescription="@string/start_logo_text"
                app:srcCompat="@drawable/cookbooktext" />

            <Button
                android:id="@+id/login_signin"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="98dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorAppRed"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/login_back"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/colorAppRed"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_signin"
                app:layout_constraintVertical_bias="0.145" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_google"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="198dp"
                android:layout_marginHorizontal="20dp" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-193dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAppRed"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:backgroundTint="@color/colorAppRed"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <ProgressBar
                android:id="@+id/loginLoading"
                android:layout_width="201dp"
                android:layout_height="220dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>