<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:id="@+id/registerLayout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <RelativeLayout
            android:id="@+id/registerRL"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:background="@color/colorPrimaryDark"
            >


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/cookbooktext"
                android:layout_margin="20dp"
                />

            <Button
                android:id="@+id/register_signup"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="90dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAppRed"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="20dp"/>

            <Button
                android:id="@+id/register_back"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAppRed"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_signup"
                app:layout_constraintVertical_bias="0.145"
                android:layout_marginHorizontal="20dp"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register_password"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-193dp"
                android:backgroundTint="@color/colorAppRed"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:backgroundTint="@color/colorAppRed"
                android:textColor="@android:color/white"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                />

            <EditText
                android:id="@+id/register_displayname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_password"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/prompt_display_name"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAppRed"
                android:layout_marginTop="16dp"
                />

        </RelativeLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>